--- a/cuImage/Base.lproj/HostsPreferencesPaneController.xib
+++ b/cuImage/Base.lproj/HostsPreferencesPaneController.xib
@@ -22,13 +22,13 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="cAb-nW-fFu">
-            <rect key="frame" x="0.0" y="0.0" width="500" height="293"/>
+            <rect key="frame" x="0.0" y="0.0" width="499" height="316"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <box titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="60g-gm-lpO" userLabel="Host Preferences Content Box">
-                    <rect key="frame" x="17" y="16" width="465" height="230"/>
+                    <rect key="frame" x="17" y="16" width="465" height="249"/>
                     <view key="contentView" id="ac9-ZY-0kj">
-                        <rect key="frame" x="2" y="2" width="461" height="226"/>
+                        <rect key="frame" x="2" y="2" width="461" height="245"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QF9-qe-ZPG">
@@ -53,10 +53,10 @@ DQ
                                 </textFieldCell>
                             </textField>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="cbc-7W-OKR">
-                                <rect key="frame" x="0.0" y="49" width="461" height="177"/>
+                                <rect key="frame" x="0.0" y="49" width="461" height="196"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="177" id="tye-aq-xNd"/>
-                                    <constraint firstAttribute="width" constant="461" id="xLo-6a-Nfm"/>
+                                    <constraint firstAttribute="width" constant="461" id="VyF-6v-geX"/>
+                                    <constraint firstAttribute="height" constant="196" id="dsd-iD-zDp"/>
                                 </constraints>
                             </customView>
                             <progressIndicator wantsLayer="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="HFo-6z-Qk3">
@@ -86,8 +86,8 @@ DQ
                         <constraints>
                             <constraint firstItem="vA3-Nk-bH0" firstAttribute="centerX" secondItem="HFo-6z-Qk3" secondAttribute="centerX" id="0RC-jQ-2zu"/>
                             <constraint firstItem="dCF-dO-hq2" firstAttribute="baseline" secondItem="vA3-Nk-bH0" secondAttribute="baseline" id="2PI-WJ-slo"/>
+                            <constraint firstItem="cbc-7W-OKR" firstAttribute="top" secondItem="ac9-ZY-0kj" secondAttribute="top" id="42P-Um-HRP"/>
                             <constraint firstItem="HFo-6z-Qk3" firstAttribute="leading" secondItem="ac9-ZY-0kj" secondAttribute="leading" constant="20" id="5Tv-pc-xwB"/>
-                            <constraint firstItem="cbc-7W-OKR" firstAttribute="top" secondItem="ac9-ZY-0kj" secondAttribute="top" id="CtK-om-FWS"/>
                             <constraint firstItem="QF9-qe-ZPG" firstAttribute="top" secondItem="cbc-7W-OKR" secondAttribute="bottom" constant="8" id="IOv-LD-fF1"/>
                             <constraint firstItem="QF9-qe-ZPG" firstAttribute="baseline" secondItem="dCF-dO-hq2" secondAttribute="baseline" id="JTg-wO-2Fc"/>
                             <constraint firstItem="BLv-JV-Boy" firstAttribute="leading" secondItem="HFo-6z-Qk3" secondAttribute="trailing" constant="8" id="M9v-O0-BPc"/>
@@ -102,9 +102,9 @@ DQ
                     </view>
                 </box>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HHV-0w-add">
-                    <rect key="frame" x="59" y="249" width="105" height="26"/>
+                    <rect key="frame" x="59" y="272" width="105" height="26"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="100" id="SDC-s0-w48"/>
+                        <constraint firstAttribute="width" constant="100" id="nre-Pk-ol8"/>
                     </constraints>
                     <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" altersStateOfSelectedItem="NO" id="hTU-kG-gj6" userLabel="Hosts Pop Up Button">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -116,7 +116,7 @@ DQ
                     </connections>
                 </popUpButton>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SCd-7M-0Ff">
-                    <rect key="frame" x="18" y="256" width="37" height="17"/>
+                    <rect key="frame" x="18" y="279" width="37" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Host:" id="SWh-CA-qNC">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -126,15 +126,15 @@ DQ
             </subviews>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="60g-gm-lpO" secondAttribute="bottom" constant="20" id="2at-Ks-o5A"/>
-                <constraint firstItem="SCd-7M-0Ff" firstAttribute="leading" secondItem="cAb-nW-fFu" secondAttribute="leading" constant="20" id="GbH-Oy-qFq"/>
-                <constraint firstAttribute="trailing" secondItem="60g-gm-lpO" secondAttribute="trailing" constant="21" id="Ril-Bd-3hf"/>
+                <constraint firstItem="60g-gm-lpO" firstAttribute="top" secondItem="HHV-0w-add" secondAttribute="bottom" constant="12" id="4M0-G5-7Aa"/>
+                <constraint firstItem="SCd-7M-0Ff" firstAttribute="top" secondItem="cAb-nW-fFu" secondAttribute="top" constant="20" id="77G-nh-exV"/>
+                <constraint firstAttribute="trailing" secondItem="60g-gm-lpO" secondAttribute="trailing" constant="20" id="Ril-Bd-3hf"/>
                 <constraint firstItem="60g-gm-lpO" firstAttribute="leading" secondItem="cAb-nW-fFu" secondAttribute="leading" constant="20" id="RxD-fH-yC8"/>
-                <constraint firstItem="HHV-0w-add" firstAttribute="leading" secondItem="SCd-7M-0Ff" secondAttribute="trailing" constant="8" id="kGw-kM-TxT"/>
-                <constraint firstItem="SCd-7M-0Ff" firstAttribute="top" secondItem="cAb-nW-fFu" secondAttribute="top" constant="20" id="q2s-9h-utj"/>
-                <constraint firstItem="HHV-0w-add" firstAttribute="baseline" secondItem="SCd-7M-0Ff" secondAttribute="baseline" id="sUT-ka-nun"/>
-                <constraint firstItem="60g-gm-lpO" firstAttribute="top" secondItem="SCd-7M-0Ff" secondAttribute="bottom" constant="12" id="vGp-nS-Ced"/>
+                <constraint firstItem="HHV-0w-add" firstAttribute="baseline" secondItem="SCd-7M-0Ff" secondAttribute="baseline" id="dKn-uz-PsD"/>
+                <constraint firstItem="HHV-0w-add" firstAttribute="leading" secondItem="SCd-7M-0Ff" secondAttribute="trailing" constant="8" id="gm6-Fy-xFG"/>
+                <constraint firstItem="SCd-7M-0Ff" firstAttribute="leading" secondItem="cAb-nW-fFu" secondAttribute="leading" constant="20" id="qEX-u3-iA8"/>
             </constraints>
-            <point key="canvasLocation" x="150" y="135.5"/>
+            <point key="canvasLocation" x="149.5" y="117.5"/>
         </customView>
         <userDefaultsController representsSharedInstance="YES" id="pFE-Vv-5Dx"/>
     </objects>
