--- a/cuImage/Base.lproj/ShortcutsPreferencesPaneController.xib
+++ b/cuImage/Base.lproj/ShortcutsPreferencesPaneController.xib
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
+        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ShortcutsPreferencesPaneController" customModule="cuImage" customModuleProvider="target">
             <connections>
+                <outlet property="popUpStatusItemMenuShortcutView" destination="q69-bI-ypl" id="o8y-1X-akh"/>
                 <outlet property="uploadImageShortcutView" destination="rLD-ry-Ahs" id="09f-lx-hKZ"/>
                 <outlet property="view" destination="2qv-Z9-ACX" id="mJD-6A-2Vc"/>
             </connections>
@@ -14,7 +16,7 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="2qv-Z9-ACX">
-            <rect key="frame" x="0.0" y="0.0" width="500" height="59"/>
+            <rect key="frame" x="0.0" y="0.0" width="500" height="84"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="rLD-ry-Ahs" customClass="MASShortcutView">
@@ -32,15 +34,35 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
+                <customView translatesAutoresizingMaskIntoConstraints="NO" id="q69-bI-ypl" customClass="MASShortcutView">
+                    <rect key="frame" x="207" y="45" width="130" height="19"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="130" id="HZu-A3-Al8"/>
+                        <constraint firstAttribute="height" constant="19" id="lqW-ME-Hph"/>
+                    </constraints>
+                </customView>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1T-Xd-fef">
+                    <rect key="frame" x="58" y="47" width="143" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Pop up cuImage menu:" id="dmD-JZ-ENe">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
             </subviews>
             <constraints>
-                <constraint firstItem="rLD-ry-Ahs" firstAttribute="top" secondItem="2qv-Z9-ACX" secondAttribute="top" constant="20" id="Uku-5a-5Uz"/>
+                <constraint firstItem="i1T-Xd-fef" firstAttribute="top" secondItem="2qv-Z9-ACX" secondAttribute="top" constant="20" id="08z-Ri-lZI"/>
+                <constraint firstItem="q69-bI-ypl" firstAttribute="leading" secondItem="i1T-Xd-fef" secondAttribute="trailing" constant="8" id="0Ys-Iw-GkU"/>
+                <constraint firstItem="q69-bI-ypl" firstAttribute="top" secondItem="i1T-Xd-fef" secondAttribute="top" id="Cc0-Td-fr2"/>
+                <constraint firstItem="i1T-Xd-fef" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2qv-Z9-ACX" secondAttribute="leading" constant="20" id="Uxe-s9-wXK"/>
                 <constraint firstItem="rLD-ry-Ahs" firstAttribute="top" secondItem="BmV-gP-z0l" secondAttribute="top" id="VAW-Nh-gxc"/>
                 <constraint firstItem="BmV-gP-z0l" firstAttribute="leading" secondItem="2qv-Z9-ACX" secondAttribute="leading" constant="20" id="dLU-fZ-4pu"/>
+                <constraint firstItem="BmV-gP-z0l" firstAttribute="top" secondItem="i1T-Xd-fef" secondAttribute="bottom" constant="8" id="f8d-iP-HBD"/>
                 <constraint firstAttribute="bottom" secondItem="rLD-ry-Ahs" secondAttribute="bottom" constant="20" id="p2h-c5-fda"/>
                 <constraint firstItem="rLD-ry-Ahs" firstAttribute="leading" secondItem="BmV-gP-z0l" secondAttribute="trailing" constant="8" id="sbD-EA-gZo"/>
+                <constraint firstItem="rLD-ry-Ahs" firstAttribute="leading" secondItem="q69-bI-ypl" secondAttribute="leading" id="u32-yH-aMf"/>
             </constraints>
-            <point key="canvasLocation" x="95.5" y="129"/>
+            <point key="canvasLocation" x="95" y="151"/>
         </customView>
     </objects>
 </document>
